WexGit/Wex_DX/force-app/main/default/objects/Merge_Records_Staging__c/Merge_Records_Staging__c.object-meta.xml
<CustomObject>
    <label>Merge Records Staging</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Merge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>