WexGit/Wex_DX/force-app/main/default/objects/Merge_Records_Staging__c/fields/Date_i2i_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_i2i_Changed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date i2i Changed</label>
    <type>DateTime</type>
</CustomField>