WexGit/Wex_DX/force-app/main/default/objects/Merge_Records_Staging__c/fields/Date_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Processed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Processed</label>
    <type>DateTime</type>
</CustomField>