WexGit/Wex_DX/force-app/main/default/objects/Merge_Records_Staging__c/fields/Most_Recent_i2i_ID__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_i2i_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The latest i2i ID for the Contact</inlineHelpText>
    <label>Most Recent i2i ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>