WexGit/Wex_DX/force-app/main/default/objects/Merge_Records_Staging__c/fields/Original_i2i_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_i2i_ID__c</fullName>
    <description>Original i2i ID prior to the change</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Original i2i ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>